--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,12 @@ android {
 }
 
 dependencies {
+    //Dependencies from the previous logic
+    // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.5.0'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.1'
+
     implementation 'com.google.accompanist:accompanist-systemuicontroller:0.28.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
