--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -10,16 +10,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Convertidores"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".AppActivities.ChooseBiActivity"
-            android:theme="@style/Theme.Convertidores"
+            android:name=".AppActivities.ChoosenBiActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Convertidores" >
+            android:theme="@style/Theme.Convertidores">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
