--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.convertidores'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.convertidores"
@@ -47,12 +47,25 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        eachDependency {
+            if ((requested.group == "org.jetbrains.kotlin") && (requested.name.startsWith("kotlin-stdlib"))) {
+                useVersion("1.8.0")
+            }
+        }
+    }
+}
+
 dependencies {
+
     //Dependencies from the previous logic
     // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.5.0'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.1'
+
+    implementation "androidx.navigation:navigation-compose:2.7.6"
 
     implementation 'com.google.accompanist:accompanist-systemuicontroller:0.28.0'
     implementation 'androidx.core:core-ktx:1.7.0'
